Content centering on mobile fix

--- a/src/less/molecule/m-block.less
+++ b/src/less/molecule/m-block.less
@@ -90,6 +90,12 @@
 .m-indexSectionContentText {
   padding-top: 40px;
   padding-bottom: 40px;
+
+  p {
+    @media screen and (max-width: 767px) {
+      text-align: center;
+    }
+  }
 }
 
 .m-indexSectionSubtitleContent {
